Base for Watering Graph
Add Function recently completed, base for new addtions

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -16,4 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/nav_graph" />
+
+    <include layout="@layout/button_bar" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
