--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -13,6 +13,7 @@
         android:layout_height="56dp"
         android:layout_marginTop="396dp"
         android:text="Manage Plants"
+        style="@style/MyButtons"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,6 +25,7 @@
         android:layout_height="56dp"
         android:layout_marginTop="480dp"
         android:text="Manage Water Supply"
+        style="@style/MyButtons"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +35,7 @@
         android:id="@+id/imageView"
         android:layout_width="360dp"
         android:layout_height="360dp"
-        android:src="@drawable/apws_logo"
+        android:src="@drawable/apws_logo_round"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
