--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -24,7 +24,7 @@
         android:layout_width="244dp"
         android:layout_height="56dp"
         android:layout_marginTop="480dp"
-        android:text="Manage Water Supply"
+        android:text="View Moisture Levels"
         style="@style/MyButtons"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
